# ebolasim-tools-clean-pass

./: .gitignore  CHECKS.md  MANIFEST.in  README.md  REVIEW.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: building-linux.md  ci-release-completion-plan.md  dropbox-refresh-smoke-test.md  history.md  index.ipynb  index.md  maintainers.ipynb  parameters.ipynb  parameters.md
docs/vignettes/ebola2/: comparison.ipynb  replay_ebola2.py
docs/vignettes/ebola2/evidence/: comparison_summary.md
docs/vignettes/ebola2/evidence/commands/: paramset_1.json  paramset_2.json
docs/vignettes/ebola2/evidence/output_subset/reference/paramset_1/: paramset_1.0.adunit.csv  paramset_1.0.age.csv  paramset_1.0.keyworker.csv  paramset_1.999.csv
docs/vignettes/ebola2/evidence/output_subset/reference/paramset_2/: paramset_2.0.adunit.csv  paramset_2.0.age.csv  paramset_2.999.age.csv
docs/vignettes/ebola2/evidence/run_metadata/: paramset_1.json  paramset_2.json
docs/vignettes/sadv/: comparison.ipynb  replay_sadv.py
docs/vignettes/sadv/evidence/: comparison_summary.md
docs/vignettes/sadv/evidence/commands/: paramset_1.json  paramset_2.json
docs/vignettes/sadv/evidence/output_subset/reference/paramset_1/: paramset_1.0.csv  paramset_1.0.seeds.csv  paramset_1.999.adunit.csv  paramset_1.999.seeds.csv
docs/vignettes/sadv/evidence/output_subset/reference/paramset_2/: paramset_2.0.csv  paramset_2.0.keyworker.csv  paramset_2.999.keyworker.csv
docs/vignettes/sadv/evidence/run_metadata/: paramset_1.json  paramset_2.json
legacy-src/: upstream.lock.yml
legacy-src/patches/: 0001-portability-headers.patch  0002-variadic-error-macro.patch  0005-const-char-input-names.patch  0006-output-header-tab-escape.patch
model-src/: upstream.lock.yml
src/ebolasim/: __init__.py  _version.py  build.py  cli.py  parameters.py  pars.py  results.py  sim.py
src/ebolasim/_patches/: 0004-windows-network-binary-compat.patch  0007-std-min-compat.patch  README.md  patches.yml  upstream.lock.yml
src/ebolasim/data/: __init__.py  parameter_reference.json
src/ebolasim_tools/: __init__.py  bat.py  binary.py  build.py  bundled.py  cli.py  command.py  examples.py  manifest.py  nordkivu.py  outputs.py  params.py  patches.py  run.py  upstream.py
src/ebolasim_tools/legacy_patches/: 0003-std-max-compat.patch  README.md  patches.yml  upstream.lock.yml
tests/: test_build_patches.py  test_docs_notebooks.py  test_ebola2_vignette.py  test_examples_binary.py  test_manifest_command.py  test_nordkivu_cli.py  test_params.py  test_public_api.py  test_run_outputs.py  test_sadv_vignette.py  test_upstream_bundled.py
tools/ci/: build_release_bundle.py
tools/dev/: README.md  generate_notebooks.py  generate_parameter_reference.py
