[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebolasim-tools"
version = "0.2.0"
description = "Lightweight Python wrapper for building, configuring, running and reading the legacy ebolasim executable."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "License status pending: legacy model source is not redistributed by this package." }
authors = [{ name = "EbolaSim tools contributors" }]
keywords = ["epidemiological-modelling", "simulation", "legacy-executable", "public-health"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]
plot = ["matplotlib>=3.7"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
ebolasim = "ebolasim_tools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ebolasim_tools" = ["_bundled/**/*"]
"ebolasim_tools.legacy_patches" = ["*.patch", "*.md", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "requires_source: requires the original legacy model source tree",
  "requires_executable: requires a compiled legacy executable",
  "slow: slow or integration-style checks",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["ebolasim_tools"]
strict = false
