[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebolasim-tools"
version = "0.2.0"
description = "Python-first interface for running and maintaining the EbolaSim C model."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Upstream-Redistribution-Pending"
authors = [{ name = "EbolaSim tools contributors" }]
keywords = ["epidemiological-modelling", "simulation", "public-health"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10", "types-PyYAML>=6"]
plot = ["matplotlib>=3.7"]
docs = [
  "ipykernel>=6.29",
  "matplotlib>=3.7",
  "mkdocs>=1.6",
  "mkdocs-jupyter>=0.26",
  "mkdocs-material>=9.5",
  "nbconvert>=7.16",
  "nbformat>=5.10",
]

[project.scripts]
ebolasim = "ebolasim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ebolasim" = ["_bundled/**/*", "data/*.json"]
"ebolasim._patches" = ["*.patch", "*.md", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "requires_source: requires the original upstream model source tree",
  "requires_executable: requires a compiled C model executable",
  "slow: slow or integration-style checks",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["ebolasim", "ebolasim_tools"]
strict = false
